Fix reactor production chart dark mode background

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,27 +29,28 @@ button {
     @apply opacity-0;
 }
 
-/* @media (prefers-color-scheme: dark) { */
+.dark .reactor-production-chart > rect:first-child {
+    @apply fill-slate-700;
+}
 
-    .dark .leaflet-tile-container {
-        background: #111;
-        filter: grayscale(100%) brightness(0.6) contrast(1.2);
-        position: relative;
-    }
+.dark .leaflet-tile-container {
+    background: #111;
+    filter: grayscale(100%) brightness(0.6) contrast(1.2);
+    position: relative;
+}
 
-    .dark .leaflet-container::after {
-        background: rgb(66, 90, 130);
-        content: '';
-        inset: 0;
-        mix-blend-mode: color;
-        opacity: 0.5;
-        pointer-events: none;
-        position: absolute;
-        z-index: 1000;
-    }
+.dark .leaflet-container::after {
+    background: rgb(66, 90, 130);
+    content: '';
+    inset: 0;
+    mix-blend-mode: color;
+    opacity: 0.5;
+    pointer-events: none;
+    position: absolute;
+    z-index: 1000;
+}
 
-    .dark .leaflet-control-attribution {
-        background: var(--color-slate-800) !important;
-        color: var(--color-slate-200) !important;
-    }
-/* } */
+.dark .leaflet-control-attribution {
+    background: var(--color-slate-800) !important;
+    color: var(--color-slate-200) !important;
+}
